--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,14 @@
+upstream app {
+    least_conn;
+    server python-service-1:3000;
+    server python-service-2:3001;
+}
+
 server {
 
     listen 80;
     location / {
-        proxy_pass http://python:3000;
+        proxy_pass http://app;
     }
-    
 }
+
