:contruction_worker: docker-compose added to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,24 @@
 sudo: required
+
 services:
-    - docker
+  - docker
+
+env:
+  DOCKER_COMPOSE_VERSION: 1.23.2
 
 before_install:
-    - docker build -t jmeisele/flask1 ./app1
-    - docker build -t jmeisele/flask2 ./app2
-    - docker build -t jmeisele/nginx ./nginx
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
 
-script:
-    - docker run jmeisele/flask1
-    - docker run jmeisele/flask2 
-    - docker run jmeisele/nginx
+before_script:
+  - docker-compose up -d --build
+
+# script:
+#   - docker-compose exec users python manage.py test
+#   - docker-compose exec users black project
+#   - docker-compose exec users flake8 project
+
+after_script:
+  - docker-compose down
