:construction_worker: added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,16 @@ script:
 
 # after_script:
 #   - docker-compose down
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "docker-flask"
+    env: "DockerFlask-env"
+    bucket_name: "elasticbeanstalk-us-east-2-726690209754"
+    bucket_path: "docker-flask"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY 
+    secret_access_key: 
+        secure: "$AWS_SECRET_KEY"
