:construction_worker: mod travis ci deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,5 @@ deploy:
     bucket_path: "docker-flask"
     on:
         branch: master
-    access_key_id: $AWS_ACCESS_KEY 
-    secret_access_key: 
-        secure: "$AWS_SECRET_KEY"
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
