--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,5 +4,7 @@ FROM nginx
 # Remove the default nginx.conf
 RUN rm /etc/nginx/conf.d/default.conf 
 
+EXPOSE 80
+
 # Replace with our own nginx.conf
 COPY nginx.conf /etc/nginx/conf.d/
