:construction_worker: cleaned up travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 # before_script:
-script:
-  - docker-compose up -d --build
-  - docker-compose down
+    # placeholder
 
-# script:
-#   - docker-compose exec users python manage.py test
-#   - docker-compose exec users black project
-#   - docker-compose exec users flake8 project
+script:
+    - docker-compose up -d --build
+    - docker-compose down
+    #   - docker-compose exec users python manage.py test
+    #   - docker-compose exec users black project
+    #   - docker-compose exec users flake8 project
 
 # after_script:
 #   - docker-compose down
