--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,14 @@ after_success:
   - docker push jmeisele/flask_app2 
   - docker push jmeisele/flask_nginx 
     
-deploy:
-    provider: elasticbeanstalk
-    region: "us-east-2"
-    app: "docker-flask"
-    env: "DockerFlask-env"
-    bucket_name: "elasticbeanstalk-us-east-2-726690209754"
-    bucket_path: "docker-flask"
-    on:
-        branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
+# deploy:
+#     provider: elasticbeanstalk
+#     region: "us-east-2"
+#     app: "docker-flask"
+#     env: "DockerFlask-env"
+#     bucket_name: "elasticbeanstalk-us-east-2-726690209754"
+#     bucket_path: "docker-flask"
+#     on:
+#         branch: master
+#     access_key_id: $AWS_ACCESS_KEY
+#     secret_access_key: $AWS_SECRET_KEY
