--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,7 +2,9 @@
 FROM nginx
 
 # Remove the default nginx.conf
-RUN rm /etc/nginx/conf.d/default.conf 
+# RUN rm /etc/nginx/conf.d/default.conf 
+RUN rm /etc/nginx/conf.d/default.conf; exit 0
+
 
 EXPOSE 80
 
